<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="#3366FF	">

    <!-- Logo Facebook -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/facebook_logo"
        android:src="@drawable/facebook_logo" />

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english_change"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:textColor="#FFFFFF" />

    <!-- Email / SĐT -->
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email_name"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        android:textColorHint="@color/white"
        />
    <!-- Mật khẩu -->
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        android:textColorHint="@color/white"
        />

    <!-- Nút đăng nhập -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        android:backgroundTint="#1877F2"
        android:textColor="#CCFFFFFF" />

    <!-- Liên kết -->

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/sign_up_for_facebook"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />
</LinearLayout>
